tests/paczka2/big_fuzzy/18906449.err
Error in line 7: S62 A667 55,8
Error in line 8: S62 A153 43,2
Error in line 13: ZNzwo A153 15,8
Error in line 16: KdHBdtow A667 20,3
Error in line 21: KdHBdtow A153 92,1
Error in line 28: Sc6 A667 31,1
Error in line 14: S62 S973 45,9
Error in line 30: Sc6 S973 88,8
Error in line 33: ZNzwo A667 70,7
Error in line 50: S62 S62 67,7
Error in line 48: 13qv8RH A667 40,3
Error in line 60: 13qv8RH S62 78,5
Error in line 67: Bmwstw A667 0,9
Error in line 71: Sc6 S62 59,3
Error in line 76: ZNzwo S973 93,0
Error in line 81: yVDClTmN A153 8",1
Error in line 84: yVDClTmN S973 4,6
Error in line 86: Bmwstw S62 48,0
Error in line 89: Bmwstw A667 60,1
Error in line 78: Sc6 A667 148,2
Error in line 87: yVDClTmN A153 43,4
Error in line 96: yVDClTmN A667 20,7
Error in line 112: 13qv8RH A153 43,4
Error in line 120: yVDClTmN A153 187,6
Error in line 101: Sc6 S62 19,0
Error in line 122: 13qv8RH A667 67,3
Error in line 131: Bmwstw A667 37,7
Error in line 129: KdHBdtow S62 1,5
Error in line 132: Bmwstw S973 4,1
Error in line 135: yVDClTmN S973 15,4
Error in line 143: ZNzwo A667 54,1
Error in line 145: 13qv8RH S62 16,5
Error in line 144: ZNzwo S62 85,9
Error in line 158: Bmwstw S973 63,9
Error in line 162: Sc6 S62 13,4
Error in line 159: KdHBdtow A667 12,0
Error in line 187: S62 A153 20,1
Error in line 188: Bmwstw S973 11,8
Error in line 204: Bmwstw A667 30,6
Error in line 199: ZNzwo A153 61,0
Error in line 210: ZNzwo S973 92,7
Error in line 218: KdHBdtow S62 33,43
Error in line 215: KdHBdtow S973 0,7
Error in line 220: KdHBdtow S62 153,8
Error in line 223: yVDClTmN S62 74,7
Error in line 217: Bmwstw A153 28,2
Error in line 237: yVDClTmN A153 90,58
Error in line 229: KdHBdtow A667 34,9
Error in line 241: KdHBdtow S973 99,0
